 452.	[bug]		Warn if the unimplemented option "statistics-file"
			is specified in named.conf. [RT #301]

 451.	[func]		Update forwarding implememted.

 450.	[func]		New function ns_client_sendraw().

 449.	[bug]		isc_bitstring_copy() only works correctly if the
			two bitstrings have the same lsb0 value, but this
			requirement was not documented, nor was there a
			REQUIRE for it.

 448.   [bug]		Host output formatting change, to match v8. [RT #255]

 447.   [bug]		Dig didn't properly retry in TCP mode after
			a truncated reply.  [RT #277]

 446.	[bug]		Confusing notify log message. [RT #298]

 445.	[bug]		Doing a 0 bit isc_bitstring_copy() of an lsb0
			bitstring triggered a REQUIRE statement.  The REQUIRE
			statement was incorrect. [RT #297]

 444.	[func]		"recursion denied" messages are always logged at
			debug level 1, now, rather than sometimes at ERROR.
			This silences these warnings in the usual case, where
			some clients set the RD bit in all queries.

 443.	[bug]		When loading a master file failed because of an
			unrecognized RR type name, the error message
			did not include the file name and line number. 
			[RT #285]

 442.	[bug]		TSIG signed messages that did not match any view
			crashed the server. [RT #290]

 441.	[bug]		Nodes obscured by a DNAME were inaccessible even
			when DNS_DBFIND_GLUEOK was set.

 440.	[func]		New function dns_zone_forwardupdate().

 439.	[func]		New function dns_request_createraw().

 438.	[func]		New function dns_message_getrawmessage().

 437.	[func]		Log NOTIFY activity to the notify channel.

 436.	[bug]		If recvmsg() returned EHOSTUNREACH or ENETUNREACH,
			which sometimes happens on Linux, named would enter
			a busy loop.  Also, unexpected socket errors were
			not logged at a high enough logging level to be
			useful in diagnosing this situation. [RT #275]

 435.	[bug]		dns_zone_dump() overwrote existing zone files 
			rather than writing to a temporary file and